Stop scrollbar appearing in infoboxes on mobile

--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -37,7 +37,7 @@ html, body {
     border-radius: 5px;
     -webkit-box-shadow: 5px 5px 5px #ccc;
     box-shadow: 5px 5px 5px #999;
-    overflow: auto;
+    overflow: hidden;
     height: 100px;
     width: 300px;
 }
@@ -57,7 +57,6 @@ html, body {
 	float: left;
 	padding: 5px 0px 0 15px;
     width: 165px;
-    overflow-y:hidden;
 }
 
 .marker_container h3 {
